--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,7 +123,15 @@
     color: #fff;
     background-color: transparent;
 }
-
+label {
+    font-size: 18px;
+}
+footer{
+     bottom: 0;
+     width: 100%;
+     height: 50px;
+     background-color: #34495e;
+}
 
 @media screen and (max-width: 767px) {
     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
